--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -1,6 +1,10 @@
 :root {
-  --kuning: #F4B700;
-  --biru: #0E3B63;
+  --kuning: #f4b700;
+  --biru: #0e3b63;
+
+  /* mobile font */
+  --h1-size: 1.75rem;
+  --h2-size: 1.3rem;
 }
 
 .bg-kuning {
@@ -12,7 +16,7 @@
 }
 
 .bg-biru {
-  background-color: var(--biru) !important; 
+  background-color: var(--biru) !important;
 }
 
 .txt-biru {
@@ -57,15 +61,40 @@ nav .nav li:last-child a:hover {
   width: 186% !important;
 }
 
-.left-image {
-  display: block;
+.left-image img {
+  object-fit: cover;
+}
+
+.jenis-informasi {
+  display: block !important;
+}
+
+.simple-cta .container .row .col-lg-12 h4 {
+  text-align: center !important;
+  font-size: 1.2rem !important;
+  font-weight: normal;
+  line-height: 40px;
 }
 
 @media only screen and (max-width: 768px) {
   /* home cover */
   .header-text h2 {
-    font-size: 1.75rem !important;
+    font-size: var(--h1-size) !important;
     line-height: 45px !important;
+  }
+
+  .right-content h4 {
+    font-size: var(--h2-size) !important;
+    text-align: center;
+  }
+
+  .section-heading h4 {
+    font-size: var(--h1-size) !important;
+  }
+
+  .simple-cta .container .row .col-lg-12 h4,
+  .simple-cta .container .row .col-lg-5 h4 {
+    font-size: var(--h1-size) !important;
   }
 
   .sub-menu.tentang {
@@ -78,7 +107,17 @@ nav .nav li:last-child a:hover {
     width: 100% !important;
   }
 
-  .left-image {
-    display: none;
+  .jenis-informasi {
+    display: none !important;
+  }
+
+  .left-image img {
+    object-fit: cover;
+    height: 260px;
+  }
+
+  .simple-cta .container .row .col-lg-12 h4 {
+    font-size: 1rem !important;
+    line-height: 35px;
   }
 }
