--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -7,6 +7,14 @@
   --h2-size: 1.3rem;
 }
 
+.page-heading h2 {
+  font-size: 2.5rem;
+}
+
+#top {
+  pointer-events: none;
+}
+
 .bg-kuning {
   background-color: var(--kuning) !important;
 }
