--- a/public/css/style.css
+++ b/public/css/style.css
@@ -250,6 +250,7 @@
   object-fit: cover;
   height: 100%;
   width: 400px !important;
+  cursor: pointer;
 }
 
 .semua-berita .right-content h4 {
@@ -292,7 +293,11 @@
   font-size: var(--text-p) !important;
   margin-bottom: 20px !important;
 }
+#detailBerita hr {
+  margin-top: 36px !important;
+}
 
+/* FOOTER SECTION CONTENT */
 #footer .col-lg-12 p {
   font-size: var(--text-lg) !important;
 }
