--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -41,6 +41,42 @@
 }
 
 @media (max-width: 576px) {
+  /* SETTINGAN PAS UPDATE DATA */
+  .div {
+    font-size: var(--text-p) !important;
+    line-height: var(--lh-p) !important;
+  }
+  .div p {
+    margin-bottom: 16px !important;
+    font-size: var(--text-p) !important;
+    line-height: var(--lh-p) !important;
+  }
+  .div ol li {
+    list-style: decimal;
+    padding-left: 3px;
+    margin-left: 26px;
+  }
+  .div ul li {
+    list-style: disc;
+    padding-left: 3px;
+    margin-left: 26px;
+  }
+  .div ol li:last-child {
+    margin-bottom: 12px;
+  }
+  .div ul li:last-child {
+    margin-bottom: 12px;
+  }
+  .div h1,
+  .div h2,
+  .div h3,
+  .div h4,
+  .div h5,
+  .div h6 {
+    margin-bottom: 8px !important;
+    font-weight: bold !important;
+  }
+
   /* BREADCUMB SECTION CONTENT */
   .breadcrumb {
     font-size: var(--text-p) !important;
@@ -204,6 +240,7 @@
   }
   .list-informasi .accordion {
     padding: 10px 20px !important;
+    line-height: var(--lh-p) !important;
   }
   .list-informasi .accordion-head {
     padding: 0px 0px !important;
@@ -288,15 +325,5 @@
   .menu-trigger {
     /* top: 38px !important; */
     width: 19px !important;
-  }
-
-  /* SETTINGAN PAS UPDATE DATA */
-  .div {
-    font-size: var(--text-p) !important;
-    line-height: var(--lh-p) !important;
-  }
-  .div p {
-    margin-bottom: 16px !important;
-    font-size: var(--text-p) !important;
   }
 }
