--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@
   --text-p: 13px !important;
   --text-lg: 15px !important;
 
-  --lh-p: 20px !important;
+  --lh-p: 21px !important;
   --lh-lg: 23px !important;
   --lh-xl: 30px !important;
 }
@@ -59,6 +59,9 @@
 }
 .sub-menu.formulir-permohonan {
   width: 305px !important;
+}
+.sub-menu.laporan {
+  width: 285px !important;
 }
 
 /* HERO CONTENT SECTION */
@@ -141,6 +144,9 @@
 #formulir .accordion-body .sub-formulir:hover span:nth-child(2) {
   transform: translateX(10px) !important;
 }
+/* .img-struktur {
+  width: 80%;
+} */
 
 /* QOUTES SECTION CONTENT */
 #qoutes .col-lg-12 {
@@ -232,7 +238,7 @@
 }
 .semua-berita .left-image img {
   object-fit: cover;
-  height: 100%;
+  height: 307px;
   width: 400px !important;
   cursor: pointer;
 }
@@ -346,6 +352,12 @@
 .div h4,
 .div h5,
 .div h6 {
-  margin-bottom: 8px !important;
+  margin-bottom: 12px !important;
   font-weight: bold !important;
+}
+.div a {
+  color: var(--biru);
+}
+.div a:hover {
+  color: var(--kuning);
 }
